force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PageOrientation__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageOrientation__c</fullName>
        <description>Page orientation of PDF documents generated with this template.</description>
        <inlineHelpText>Page orientation of PDF documents generated with this template.</inlineHelpText>
        <label>Page Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portrait</fullName>
                    <default>true</default>
                    <label>Portrait</label>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>