force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PageWidth__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageWidth__c</fullName>
        <defaultValue>8.5</defaultValue>
        <description>Page width in inches.</description>
        <inlineHelpText>Page width in inches.</inlineHelpText>
        <label>Page Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>