force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PartnerDiscountLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PartnerDiscountLabel__c</fullName>
        <defaultValue>&quot;PARTNER DISCOUNT&quot;</defaultValue>
        <description>Label used for partner discount in subtotals and totals sections.</description>
        <inlineHelpText>Label used for partner discount in subtotals and totals sections.</inlineHelpText>
        <label>Partner Discount Label</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>