force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PartnerDiscountShown__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PartnerDiscountShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the quote-level partner discount is displayed in the quote totals.</description>
        <inlineHelpText>Select the checkbox if you want quote-level partner discount displayed in the quote totals.</inlineHelpText>
        <label>Show Partner Discount</label>
        <type>Checkbox</type>
    </CustomField>