force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__RenewedProductsShown__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewedProductsShown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if renewed products are shown on Renewal quotes generated from this template.</description>
        <inlineHelpText>Select the checkbox if renewed products should be shown on Renewal quotes generated from this template.</inlineHelpText>
        <label>Show Renewed Products</label>
        <type>Checkbox</type>
    </CustomField>