force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__RightMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RightMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Right margin on the page.</description>
        <inlineHelpText>Right margin setting on the page.</inlineHelpText>
        <label>Right Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>