force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__ShadingColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShadingColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <description>Color of shading in column headers expressed as a hexadecimal.</description>
        <inlineHelpText>Color of shading in column headers expressed as a hexadecimal.</inlineHelpText>
        <label>Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>