force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__SubGroupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubGroupField__c</fullName>
        <description>Field used to sub group line items.</description>
        <inlineHelpText>Field used to sub group line items.</inlineHelpText>
        <label>Sub Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>