force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__SubtotalField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubtotalField__c</fullName>
        <description>Field to sum and display as group/quote subtotal.</description>
        <inlineHelpText>Select a Field to sum and display as group/quote subtotal.</inlineHelpText>
        <label>Subtotal Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>Regular Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>