force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__SubtotalLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubtotalLabel__c</fullName>
        <description>Label for subtotal field.</description>
        <inlineHelpText>Enter a label for the subtotal field.</inlineHelpText>
        <label>Subtotal Label</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>