force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TermBodyIndent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermBodyIndent__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Indent in pixels of quote term body relative to the term number.</description>
        <inlineHelpText>Indent in pixels of quote term body relative to the term number.</inlineHelpText>
        <label>Term Body Indent (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>