force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TermsConditions__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermsConditions__c</fullName>
        <description>Terms &amp; Conditions printed on every document generated with this template.</description>
        <inlineHelpText>Terms &amp; Conditions printed on every document generated with this template.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>