force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TermsConditionsTitle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermsConditionsTitle__c</fullName>
        <defaultValue>&quot;Terms &amp; Conditions&quot;</defaultValue>
        <description>Title of the section that displays Terms &amp; Conditions.</description>
        <inlineHelpText>Title of the section that displays Terms &amp; Conditions.</inlineHelpText>
        <label>Terms &amp; Conditions Title</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>