force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TermsNumbered__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermsNumbered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether quote terms rendered by this template are numbered.</description>
        <inlineHelpText>Select the checkbox if the quote terms rendered by this template should be numbered.</inlineHelpText>
        <label>Number Terms</label>
        <type>Checkbox</type>
    </CustomField>