force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TextColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Default color (in HEX) applied to text in this template.</description>
        <inlineHelpText>Default color (in HEX) applied to text in this template.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>