force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TopMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Top margin on the page.</description>
        <inlineHelpText>Top margin on the page.</inlineHelpText>
        <label>Top Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>