force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TotalField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TotalField__c</fullName>
        <description>Field to sum and display as group/quote total.</description>
        <inlineHelpText>Select the Field to sum and display as group/quote total.</inlineHelpText>
        <label>Total Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>