force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TotalLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TotalLabel__c</fullName>
        <description>Label for total field.</description>
        <inlineHelpText>Enter the label for the field set in Total Field.</inlineHelpText>
        <label>Total Label</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>