force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__TotalsHidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TotalsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether quote totals should be printed on the quote document.</description>
        <inlineHelpText>Select the checkbox to hide quote totals on the quote document.</inlineHelpText>
        <label>Hide Totals</label>
        <type>Checkbox</type>
    </CustomField>