force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__WatermarkId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__WatermarkId__c</fullName>
        <description>Salesforce ID for the document containing the watermark image used in the quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the watermark image used in the quote PDF.</inlineHelpText>
        <label>Watermark ID</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>