force-app/main/default/objects/SBQQ__QuoteTemplate__c/validationRules/SBQQ__Blank_Header_Height.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Blank_Header_Height</fullName>
        <active>true</active>
        <description>Checks if Header Height is blank if Page Number Position is set to &apos;Header&apos;.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(SBQQ__PageNumberPosition__c, &quot;Header&quot;),
            ISBLANK(SBQQ__HeaderHeight__c)), true, null)</errorConditionFormula>
        <errorMessage>Header Height can not be blank if Page Number Position is set to Header.</errorMessage>
    </ValidationRule>